# uwufs

./: .gitignore  Makefile  README.md  a  c_api_test  check_eq.py  cpp_inode_tests  mkfs.uwu  mount.uwu  spam-mail  spam-mail.c  test
fs/: CMakeLists.txt  README.md
fs/include/: Disk.h  FileSystem.h  FileSystemPolicy.h  defs.h
fs/lib/: Disk.cpp  FileSystem.cpp  FileSystemPolicy.cpp
fs/src/: main.cpp
fs/tests/: test.cpp
src/phase1/: spam-mail  spam-mail.c
src/test/: c_api_test.c  c_api_test.cpp  cpp_inode_tests.cpp  find_free_inode.c  rw-complex-test.c  rwtest.c  test.c  test.py  test.sh  testdir.sh
src/uwufs/: README.md  c_api.h  file_operations.c  file_operations.h  low_level_operations.c  low_level_operations.h  mkfs-uwu.c  mkfs_uwu.c  mount_uwufs.c  syscalls.c  syscalls.h  uwufs.h  uwufs_operations.c  uwufs_operations.h
src/uwufs/cpp/: DataBlockIterator.cpp  DataBlockIterator.h  INode.cpp  INode.h  c_api.cpp  c_api.h
